Restore JDK 8 runtime compatibility, fixes #888 (#893)